! Try using webpack

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 	<div class="container">
 		<p>Hello, world</p>
 	</div>
-	<script type="module" src="./js/main.js"></script>
+	<script type="module" src="./js/bundle.js"></script>
 </body>
 </html>
