basic html structure

--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 	<div class="container">
-		<p>Hello, world</p>
+		<div class="main-header">header</div>
+		<div class="main-content">content</div>
+		<div class="right-head">head</div>
+		<div class="right-pane">pane</div>
+		<div class="right-foot">foot</div>
 	</div>
 	<script type="module" src="./js/bundle.js"></script>
 </body>
