generate people list as tsv

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
 				<div id="save-button-container">
 					<button id="save-button" class="normal-button">保存</button>
 				</div>
+				<div id="debug-button-a-container">
+					<button id="debug-button-a" class="normal-button">人リスト</button>
+				</div>
 			</div>
 		</div>
 	</div>
