Change: export as table

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 				<input type="date" id="date-start" name="date-start" value="">
 			</div>
 		</div>
-		<div class="main-content">content</div>
+		<div class="main-content">
+			content
+			<div id="main-box"></div>
+		</div>
 		<div class="right-head">
 			<div class="error-msg" id="error-container">（エラーがあればここ）</div>
 		</div>
