--- a/index.html
+++ b/index.html
@@ -44,11 +44,17 @@
 				<div id="exec-button-container">
 					<button id="exec-button" class="normal-button">実行</button>
 				</div>
-				<div id="save-button-container">
+				<div id="save-button-container" class="save-button-container">
 					<button id="save-button" class="normal-button">保存</button>
 				</div>
 				<div id="debug-button-a-container">
-					<button id="debug-button-a" class="normal-button">人リスト</button>
+					<button id="debug-button-a" class="normal-button">スタッフ一覧確認</button>
+				</div>
+				<div class="debug-button-b-container" id="debug-button-b-container">
+					<button id="debug-button-b" class="normal-button">シフト確認</button>
+				</div>
+				<div class="debug-button-c-container" id="debug-button-c-container">
+					<button id="debug-button-c" class="normal-button">便利ボタン</button>
 				</div>
 			</div>
 		</div>
